--- a/assets/style/whoiam.css
+++ b/assets/style/whoiam.css
@@ -66,11 +66,13 @@
     margin-top: 30%;
     display: grid;
     justify-content: center;
+    animation-delay: 2s;  
 }
 
 .whoiam__p2 {
     grid-area: whoiam__p2;
     margin-top: 6%;
+    animation-delay: 3s;  
 
 }
 
@@ -84,6 +86,7 @@
     display: grid;
     justify-content: start;
     align-content: center;
+    animation-delay: 4s;  
 }
 
 .whoiam__p4 {
@@ -91,6 +94,7 @@
     display: grid;
     align-items: flex-end;
     margin-left: 2%;
+    animation-delay: 5s;  
 
 }
 
@@ -100,5 +104,20 @@
     justify-content: start;
     align-content: flex-end;
     margin-bottom: 0%;
+    animation-delay: 6s;  
 
 }
+
+.whoiam__p1, .whoiam__p2, .whoiam__p3, .whoiam__p4, .whoiam__p5{
+  opacity: 0;
+  animation-name: fadeIn;
+  animation-duration: 1s;
+  animation-iteration-count: 1;
+  animation-timing-function: linear;  
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeIn {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+    }
