--- a/assets/style/whoiam.css
+++ b/assets/style/whoiam.css
@@ -15,7 +15,7 @@
 .whoiam__p1, .whoiam__p2, .whoiam__p3, .whoiam__p4 {
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
-    font-size: 35px;
+    font-size: 2vw;
     line-height: 47px;
     text-align: center;
 }
@@ -24,14 +24,14 @@
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-style: bold;
-    font-size: 40px;
-    line-height: 59px;
+    font-size: 2.5vw;
+    line-height: 59xp;
     text-align: center;
 }
 
 .whoiam__img {
     max-width: 100%;
-    min-height: 100%;
+    max-height: 100%;
 }
 
 .whoiam__container {
@@ -59,6 +59,7 @@
                         "whoiam__p5"
                          ".";
     grid-template-rows: 1fr 1fr 1.2fr 1fr 1fr;
+    max-height: 120vh;
 }
 
 .whoiam__p1 {
