--- a/assets/style/footer.css
+++ b/assets/style/footer.css
@@ -5,6 +5,12 @@
 }
 .footer__container{
     display:grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    column-gap: 45vw;
+}
+.footer__container1{
+    display:grid;
     grid-template-columns: 8vw 12vw;
     grid-template-rows: 10vh 5vh 5vh;
     padding-left: 5vw;
@@ -22,5 +28,18 @@
     font-family: 'Raleway', sans-serif;
     font-weight: 500;
     font-size: 17px;
+    color:white;
+}
+.footer__container2{
+    padding-top: 5vh;
+    display:grid;
+    grid-template-columns: 1fr;
+    grid-template-rows:repeat(5,4vh);
+
+}
+.footer__a5, .footer__a6, .footer__a7, .footer__p1, .footer__p2{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 500;
+    font-size: 13px;
     color:white;
 }
