--- a/assets/style/header.css
+++ b/assets/style/header.css
@@ -10,6 +10,7 @@ font-family: 'Raleway', sans-serif;
 font-weight: 600;
 text-align: center;
 border-radius: 50px;
+transition: font-size 0.5s ease;
 }
 .header a{
     color:white;
@@ -19,7 +20,7 @@ border-radius: 50px;
     width:6.8vw;
 }
 .header__item1:hover, .header__item2:hover, .header__item3:hover, .header__item4:hover{
-    font-size: 25px;
+    font-size: 26px;
 }
 .header__item2{
     width:15.9vw;
