--- a/assets/style/mainpage.css
+++ b/assets/style/mainpage.css
@@ -1,14 +1,16 @@
 .mainpage{
-    width: 89vw;
+    width:89vw;
     padding-left: 5vw;
     padding-top:10vh;
     display:grid;
     grid-template-columns: 40vw 55vw;
-    grid-template-rows:15vh 35vh 10vh 30vh;
+    grid-template-rows: 50vh 30vh;
+    margin:0;
 }
 .mainpage__text{
+    padding-top: 20vh;
     grid-column:1/2;
-    grid-row:2/3;
+    grid-row:1/2;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
     font-size: 36px;
@@ -19,8 +21,9 @@
 }
 .mainpage__button{
     width: 80%;
+    height:35%;
     grid-column:1/2;
-    grid-row:3/4;
+    grid-row:2/3;
     font-size:30px;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
@@ -29,19 +32,25 @@
     border-radius: 50px;
     color:white;
     margin-left: 4vw;
+    transition: font-size 0.5s ease;
 }
 .mainpage__button:hover{
     font-size:31px;
 }
 .mainpage__photodiv{
+    margin: 0;
+    position: relative;
     grid-column:2/3;
     grid-row:1/5;
     background-image: url("../images/mainpage/circles.png");
     background-size: 100%;
     background-repeat: no-repeat;
+    background-position: 0% 85%;
 }
 .mainpage__photo{
-    width:89.5%;
+    align-self: flex-end;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .mainpage__photodiv, .mainpage__photo{
