--- a/assets/style/tryforfree.css
+++ b/assets/style/tryforfree.css
@@ -10,6 +10,7 @@ a{
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
     font-size: 55px;
+    color:white;
     text-align: center;
     background-color: #2FC97F;
     border-radius: 50px;
@@ -21,7 +22,7 @@ a{
     padding-right: 5vw;
     display: grid;
     grid-template-columns: 55vw 35vw;
-    grid-template-rows: 20vh 30vh 24vh;
+    grid-template-rows: 20vh 30vh 24vh 20vh;
 
 }
 .tryforfree__text1{
@@ -33,11 +34,13 @@ a{
     background-repeat: no-repeat;
     background-position:35% 50%; 
     background-size: 12%;
+    transition-property:background-size;
+    transition-duration:1s;
+    transition-timing-function:ease;
 
 }
 .tryforfree__text1:hover{
     background-size: 15%;
-    background-position:32% 43%; 
 }
 .tryforfree__text2{
     grid-column:1/2;
@@ -48,9 +51,23 @@ a{
     background-image: url(../images/tryforfree/fon2.png);
     background-repeat: no-repeat;
     background-position:60% 0%; 
+    background-size: 17%;
+    transition-property:background-size;
+    transition-duration:1s;
+    transition-timing-function:ease;
 }
 .tryforfree__text2:hover{
     background-size: 20%;
+
+}
+.tryforfree__text3{
+    grid-column:1/2;
+    grid-row:4/5;
+    padding-top:5vh;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 600;
+    font-size: 40px;
+    margin:0;
 }
 .tryforfree__text1, .tryforfree__text2{
     font-family: 'Raleway', sans-serif;
@@ -59,13 +76,9 @@ a{
     margin:0;
 
 }
-.tryforfree__photodiv{
+.tryforfree__photo{
     grid-column:2/3;
     grid-row:1/5;
-   
-}
-.tryforfree__photo{
+    align-self: flex-end;
     width: 100%;
-   
-    padding-top: 10vh;
 }
