--- a/assets/style/whoiam.css
+++ b/assets/style/whoiam.css
@@ -7,7 +7,7 @@
     font-weight: 600;
     font-size: 55px;
     text-align: center;
-    background-color: #2FC97F99;
+    background-color:#2FC97F;
     color: rgb(255, 255, 255);
     border-radius: 50px;
 }
@@ -67,13 +67,13 @@
     margin-top: 30%;
     display: grid;
     justify-content: center;
-    animation-delay: 2s;  
+    animation-delay: 5s;  
 }
 
 .whoiam__p2 {
     grid-area: whoiam__p2;
     margin-top: 6%;
-    animation-delay: 3s;  
+    animation-delay: 6s;  
 
 }
 
@@ -87,7 +87,7 @@
     display: grid;
     justify-content: start;
     align-content: center;
-    animation-delay: 4s;  
+    animation-delay: 7s;  
 }
 
 .whoiam__p4 {
@@ -95,7 +95,7 @@
     display: grid;
     align-items: flex-end;
     margin-left: 2%;
-    animation-delay: 5s;  
+    animation-delay: 8s;  
 
 }
 
@@ -105,7 +105,7 @@
     justify-content: start;
     align-content: flex-end;
     margin-bottom: 0%;
-    animation-delay: 6s;  
+    animation-delay: 9s;  
 
 }
 
