--- a/assets/style/header.css
+++ b/assets/style/header.css
@@ -1,5 +1,5 @@
 .header__item1, .header__item2, .header__item3, .header__item4 {
-height:40px;
+height: 8vh;
 padding-left:1vw;
 padding-right: 1vw;;
 padding-top:1vh;
@@ -16,14 +16,20 @@ transition: font-size 0.5s ease;
     color:white;
     text-decoration: none;
 }
+
+.header a:hover{
+    color:white;
+    text-decoration: none;
+}
+
 .header__item1{
-    width:6.8vw;
+    width: 7.3vw;
 }
 .header__item1:hover, .header__item2:hover, .header__item3:hover, .header__item4:hover{
     font-size: 26px;
 }
 .header__item2{
-    width:15.9vw;
+    width:16.3vw;
 
 }
 .header__item3{
@@ -46,7 +52,6 @@ transition: font-size 0.5s ease;
     padding-right: 5vw;
     padding-top: 4vh;
     justify-content: space-between;
-    
 }
 .header__container{
     padding-top: 1vh;
