--- a/assets/style/lessons.css
+++ b/assets/style/lessons.css
@@ -1,17 +1,20 @@
 .lessons {
     display: grid;
     grid-template-columns: 60% 40%;
-    grid-template-rows: 20% 80%;
+    grid-template-rows: 10% 90%;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
-    font-size: 36px;
     text-align: center;
 }
 
-h2 {
+.lessons h2 {
     display: grid;
     grid-column: 1/3;
     grid-row: 1/2;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 600;
+    font-size: 400%;
+
 }
 
 .lessons_img {
@@ -20,16 +23,19 @@ h2 {
     grid-row: 2/3;
     background-image: url(../images/lessons/lessons_fon.png);
     background-repeat: no-repeat;
-    background-size: 74%;
-    background-position-x: 46%;
-    background-position-y: 62%;
+    background-size: 82%;
+    background-position-x: 88%;
+    background-position-y: 83%;
 
 }
 
 .lessons_img img {
-    width: 43vw;
-    height: 40vh;
-    padding: 10%;
+    width: 55vw;
+    height: 62vh;
+    padding: 7%;
+    margin-left: 8%;
+    margin-top: 7%;
+    
 }
 
 .lessons_text {
@@ -37,50 +43,65 @@ h2 {
     grid-column: 2/3;
     grid-row: 2/3;
     text-decoration: none;
-    padding: 5%;
+    margin-top: 7%;
 }
 
 .lessons_text ul {
+    display: grid;
     list-style-type: none;
+    justify-content: start;
+    align-content: center;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 400;
+    font-size: 200%;
+    text-align: center;
 }
-
+.lessons_text ul li {
+    margin-top: 5%;
+    padding-right: 15%;
+}
 .lessons2 {
     display: grid;
     grid-template-columns: 50% 50%;
+    grid-template-rows: 10% 90%;
     font-family: 'Raleway', sans-serif;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 100%;
     text-align: center;
 }
 
-.video {
+.lessons2 .video {
     display: grid;
 }
 
-.teoria {
+.lessons2.teoria {
     display: grid;
     grid-column: 2/3;
     grid-template-columns: 15% 60% 15%;
-    grid-template-rows: 10% 90%;
+    grid-row: 10% 90%;
 }
 
 .lessons2 .teoria .conspect_img {
     display: grid;
     width: 20vw;
     grid-column: 2/3;
+    grid-row: 2/3;
 }
 
 .lessons2 .teoria .conspect {
     display: grid;
     justify-content: center;
+    grid-column: 2/3;
+    grid-row: 2/3;
 }
 
 
 .lessons2 .teoria .button_left {
     display: grid;
-    align-items: center;
+    align-content: center;
     grid-column: 1/2;
     width: 5vh;
+    grid-row: 2/3;
 }
 .lessons2 .teoria .button_left a img {
     display: grid;
@@ -92,6 +113,7 @@ h2 {
     align-items: center;
     width: 5vh;
     grid-column: 3/4;
+    grid-row: 2/3;
 }
 
 .lessons2 .teoria .button_right a img {
@@ -101,4 +123,5 @@ h2 {
 .lessons2 .teoria h2 {
     display: grid;
     grid-column: 1/4;
+    grid-row: 1/2;
 }
