--- a/assets/style/footer.css
+++ b/assets/style/footer.css
@@ -43,3 +43,10 @@
     font-size: 13px;
     color:white;
 }
+.link3{
+    text-decoration: none;
+}
+.link3:hover{
+text-decoration: none;
+color: white;
+}
