--- a/assets/style/price.css
+++ b/assets/style/price.css
@@ -25,7 +25,7 @@
     font-size: 55px;
     text-align: center;
     background-color:#F389DB99;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     border-radius: 50px;
 }
 
@@ -59,6 +59,10 @@ height: 10vh;
     width: 13vw;
     height: 14vh;
     font-family: 'Raleway', sans-serif;
-    font-size: 35px;
+    font-size:  1.7vw;
     font-weight: 800;
+}
+
+.price__button1:hover,.price__button2:hover, .price__button3:hover{
+    font-size: 1.9vw;
 }
