--- a/assets/style/lessons.css
+++ b/assets/style/lessons.css
@@ -1,7 +1,7 @@
 .lessons {
     display: grid;
     grid-template-columns: 60% 40%;
-    grid-template-rows: 10% 90%;
+    grid-template-rows: 20% 80%;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
     text-align: center;
@@ -9,11 +9,18 @@
 
 .lessons h2 {
     display: grid;
+    align-items: center;
     grid-column: 1/3;
     grid-row: 1/2;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
-    font-size: 400%;
+    font-size: 300%;
+    background-image: url(../images/lessons/fon_h2.png);
+    background-repeat: no-repeat;
+    background-position-x: 51%;
+    background-position-y: 50%;
+    background-size: 40%;
+    color: white;
 
 }
 
@@ -30,11 +37,12 @@
 }
 
 .lessons_img img {
+    display: grid;
+    align-items: flex-start;
     width: 55vw;
     height: 62vh;
     padding: 7%;
     margin-left: 8%;
-    margin-top: 7%;
     
 }
 
@@ -88,6 +96,7 @@
     width: 20vw;
     grid-column: 2/3;
     grid-row: 2/3;
+    max-width: 100%;
 }
 
 .lessons2 .teoria .conspect {
