--- a/assets/style/footer.css
+++ b/assets/style/footer.css
@@ -1,3 +1,4 @@
+@media screen and (min-width: 601px) {
 .footer{
     height:30vh;
     background-color: #2FC97F;
@@ -50,4 +51,8 @@
 .link3:hover{
 text-decoration: none;
 color: white;
-}
+}}
+@media screen and (max-width: 600px) {
+    .footer{
+        display: none;
+    }}
