--- a/assets/style/header.css
+++ b/assets/style/header.css
@@ -1,3 +1,4 @@
+@media screen and (min-width: 601px) {
 .header__item1, .header__item2, .header__item3, .header__item4 {
 height: 7vh;
 padding-left:1vw;
@@ -38,6 +39,9 @@ border-radius: 50px;
 .header__item4{
     width:18vw;
 }
+.header__item5{
+    display: none;
+}
 .header__logo{
     width:30vw;
     font-size: 44px;
@@ -56,4 +60,45 @@ border-radius: 50px;
 .header__container{
     padding-top: 1vh;
     display:flex;
+}}
+@media screen and (max-width: 600px) {
+ .header__item1, .header__item2, .header__item3, .header__item4{
+    display: none;
+ }
+ .header__item5 {
+    width: 20vw;
+    height: 6vh;
+    padding-left:1vw;
+    padding-right: 1vw;;
+    padding-top:1vh;
+    margin-left: 2vw;
+    background-color: #2FC97F;
+    font-size: 4vw;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 600;
+    text-align: center;
+    border-radius: 50px;
+    }
+    .header a{
+        color:white;
+        text-decoration: none;
+    }
+    
+    .header a:hover{
+        color:white;
+        text-decoration: none;
+    }
+    .header{
+        padding-top: 8vh;
+        padding-left: 5vw;
+        padding-right: 5vw;
+        display: flex;
+        justify-content: space-between;
+    }
+    .header__logo{
+        width:40vw;
+        font-size: 20px;
+        font-family: 'Raleway', sans-serif;
+        font-weight: 600;
+    }
 }
