--- a/assets/style/tryforfree.css
+++ b/assets/style/tryforfree.css
@@ -1,4 +1,4 @@
-
+@media screen and (min-width: 601px) {
 .tryforfree__h2{
     width:48vw;
     margin-left: 12vw;
@@ -22,6 +22,9 @@
     grid-template-columns: 50vw 40vw;
     grid-template-rows: 13vh 37vh 27vh 25vh;
 
+}
+.tryforfree__text1__mobile, .tryforfree__text2__mobile, .tryforfree__text3__mobile{
+    display: none;
 }
 .tryforfree__text1{
     grid-column: 1/2;
@@ -104,4 +107,107 @@
 .link2:hover{
     color:black;
     text-decoration: none;
+}}
+
+@media screen and (max-width: 600px) {
+    .tryforfree__container{
+        padding-left: 5vw;
+        padding-right: 5vw;
+        display: grid;
+        margin-top:10vh;
+        grid-template-columns: 90vw;
+        grid-template-rows: 15vh 25vh 25vh 25vh 30vh;
+    
+    }
+    .tryforfree__text1, .tryforfree__text2, .tryforfree__text3{
+        display: none;
+    }
+    .tryforfree__h2 {
+        width: 80vw;
+        height: 8vh;
+        margin-left: 7vw;
+        margin-bottom: 0.5vh;
+        margin-top: 8vh;
+        padding-top: 1vh;
+        font-family: 'Raleway', sans-serif;
+        font-weight: 600;
+        font-size: 7vw;
+        text-align: center;
+        background-color: #2FC97F;
+        color: rgb(255, 255, 255);
+        border-radius: 50px;
+    }
+    .tryforfree__text1__mobile{
+    
+        padding-top: 10vh;
+        padding-left: 5vw;
+        background-image: url('../images/tryforfree/fon1.png');
+        background-repeat: no-repeat;
+        background-position:30% 95%; 
+        background-size: 20%;
+        text-decoration: none;
+        text-align: left;
+        color:black;
+        transition-property:background-size;
+        transition-duration:1s;
+        transition-timing-function:ease;
+    
+    }
+ 
+    .tryforfree__text2__mobile{
+
+        padding-left: 9vw;
+        padding-top: 2vh;
+        text-align: center;
+        background-image: url(../images/tryforfree/fon2.png);
+        background-repeat: no-repeat;
+        background-position:75% 0%; 
+        background-size: 30%;
+        text-decoration: none;
+        text-align: right;
+        color:black;
+        transition-property:background-size;
+        transition-duration:1s;
+        transition-timing-function:ease;
+    }
+
+    .tryforfree__text3__mobile{
+
+        padding-top:5vh;
+        font-family: 'Raleway', sans-serif;
+        font-weight: 600;
+        font-size: 30px;
+        background-image: url(../images/tryforfree/fon2.png);
+        background-repeat: no-repeat;
+        background-position:20% 50%; 
+        background-size: 23%;
+        text-decoration: none;
+        color:black;
+        margin:0;
+        transition-property:background-size;
+        transition-duration:1s;
+        transition-timing-function:ease;
+    }
+
+    .tryforfree__text1__mobile, .tryforfree__text2__mobile{
+        font-family: 'Raleway', sans-serif;
+        font-weight: 500;
+        font-size: 25px;
+        margin:0;
+    
+    }
+    .tryforfree__photo{
+        justify-self: flex-end;
+        align-self: flex-end;
+        width: 50%;
+    }
+    .link2{
+        color:black;
+        text-decoration: none;
+    }
+    .link2:hover{
+        color:black;
+        text-decoration: none;
+    }
+    
 }
