--- a/assets/style/price.css
+++ b/assets/style/price.css
@@ -1,68 +1,135 @@
-.card-1, .card-2, .card-3 {
-    background-color:  #2FC97F;
+.card-1,
+.card-2,
+.card-3 {
+    background-color: #2FC97F;
     border-radius: 50px;
 }
 
-.price__h5 {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 600;
-    font-size: 1.5vw;
-}
+@media screen and (min-width: 601px) {
 
-.price__text {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 800;
-    font-size: 1.5vw;
-}
+    .price-cardmobil {
+        display: none;
+    }
 
-.price__h2 {
-    width: 17vw;
-    margin-left: 41vw;
-    margin-bottom: 7vh;
-    padding-top: 0.1vh;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 600;
-    font-size: 55px;
-    text-align: center;
-    background-color:#F389DB99;
-    color: rgb(255, 255, 255);
-    border-radius: 50px;
-}
+    .price__buttonmobil {
+        display: none;
+    }
 
-.price__button1 {
-margin-right: 4vw;
-width: 13vw;
-height: 10vh;
-    font-family: 'Raleway', sans-serif;
-    font-size: 1.7vw;
-    font-weight: 800;
-}
+    .price__h5 {
+        font-family: 'Raleway', sans-serif;
+        font-weight: 600;
+        font-size: 1.5vw;
+    }
 
-.price__button2 {
-    width: 13vw;
-    height: 10vh;
+    .price__text {
+        font-family: 'Raleway', sans-serif;
+        font-weight: 800;
+        font-size: 1.5vw;
+    }
+
+    .price__h2 {
+        width: 17vw;
+        margin-left: 41vw;
+        margin-bottom: 7vh;
+        padding-top: 0.1vh;
+        font-family: 'Raleway', sans-serif;
+        font-weight: 600;
+        font-size: 55px;
+        text-align: center;
+        background-color: #F389DB99;
+        color: rgb(255, 255, 255);
+        border-radius: 50px;
+    }
+
+    .price__button1 {
+        margin-right: 4vw;
+        width: 13vw;
+        height: 10vh;
         font-family: 'Raleway', sans-serif;
         font-size: 1.7vw;
         font-weight: 800;
     }
 
-.price__button3 {
-    margin-left: 4vw;
-    width: 13vw;
-    height: 10vh;
-    font-family: 'Raleway', sans-serif;
-    font-size: 1.7vw;
-    font-weight: 800;
+    .price__button2 {
+        width: 13vw;
+        height: 10vh;
+        font-family: 'Raleway', sans-serif;
+        font-size: 1.7vw;
+        font-weight: 800;
+    }
+
+    .price__button3 {
+        margin-left: 4vw;
+        width: 13vw;
+        height: 10vh;
+        font-family: 'Raleway', sans-serif;
+        font-size: 1.7vw;
+        font-weight: 800;
+    }
+
+    .price__buttons {
+        width: 13vw;
+        height: 14vh;
+        font-family: 'Raleway', sans-serif;
+        font-size: 1.7vw;
+        font-weight: 800;
+    }
+
+    .price__button1:hover,
+    .price__button2:hover,
+    .price__button3:hover {
+        font-size: 1.9vw;
+    }
+
 }
 
-.price__buttons {
-    width: 13vw;
-    height: 14vh;
-    font-family: 'Raleway', sans-serif;
-    font-size:  1.7vw;
-    font-weight: 800;
-}
+@media screen and (max-width: 600px) {
+    .price-card {
+        display: none;
+    }
 
-.price__button1:hover,.price__button2:hover, .price__button3:hover{
-    font-size: 1.9vw;
+    .price__buttons {
+        display: none;
+    }
+
+    .price__h2 {
+        width: 37vw;
+        height: 6vh;
+        margin-left: 32vw;
+        margin-bottom: 6vh;
+        margin-top: 1vh;
+        padding-top: 0.5vh;
+        font-family: 'Raleway', sans-serif;
+        font-weight: 600;
+        font-size: 7vw;
+        text-align: center;
+        background-color: #F389DB99;
+        color: rgb(255, 255, 255);
+        border-radius: 50px;
+    }
+
+    .price__h5cardtext {
+        font-family: 'Raleway', sans-serif;
+        font-weight: 600;
+        font-size: 4.2vw;
+        text-align: center;
+
+    }
+
+    .price__cardtext2 {
+        font-family: 'Raleway', sans-serif;
+        font-weight: 800;
+        font-size: 3.9vw;
+        text-align: center;
+    }
+
+    .price__button {
+        width: 40vw;
+        height: 7vh;
+        font-family: 'Raleway', sans-serif;
+        font-size: 4.5vw;
+        font-weight: 800;
+    }
+
+
 }
