--- a/assets/style/mainpage.css
+++ b/assets/style/mainpage.css
@@ -1,167 +1,194 @@
 @media screen and (min-width: 601px) {
-.mainpage{
-    width:89vw;
+  .mainpage {
+    width: 89vw;
     padding-left: 5vw;
-    padding-top:10vh;
-    display:grid;
+    padding-top: 10vh;
+    display: grid;
     grid-template-columns: 40vw 55vw;
     grid-template-rows: 50vh 30vh;
-    margin:0;
-}
-.mainpage__text{
+    margin: 0;
+  }
+
+  .mainpage__text {
     padding-top: 20vh;
-    grid-column:1/2;
-    grid-row:1/2;
+    grid-column: 1/2;
+    grid-row: 1/2;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
     font-size: 36px;
     text-align: center;
-}
-.mainpage__text span{
+  }
+
+  .mainpage__text span {
     font-weight: 800;
-}
-.mainpage__button{
+  }
+
+  .mainpage__button {
     width: 80%;
-    height:35%;
-    grid-column:1/2;
-    grid-row:2/3;
-    font-size:30px;
+    height: 35%;
+    grid-column: 1/2;
+    grid-row: 2/3;
+    font-size: 30px;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
     background-color: #2FC97F;
     border: none;
     border-radius: 50px;
-    color:white;
+    color: white;
     margin-left: 4vw;
 
-}
-.mainpage__button:hover{
-    font-size:31px;
-}
-.mainpage__photodiv{
+  }
+
+  .mainpage__button:hover {
+    font-size: 31px;
+  }
+
+  .mainpage__photodiv {
     margin: 0;
     position: relative;
-    grid-column:2/3;
-    grid-row:1/5;
+    grid-column: 2/3;
+    grid-row: 1/5;
     background-image: url("../images/mainpage/circles.png");
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: 0% 85%;
-}
-.mainpage__photo{
+  }
+
+  .mainpage__photo {
     align-self: flex-end;
     max-width: 100%;
     max-height: 100%;
-}
+  }
 
-.mainpage__photodiv, .mainpage__photo{
+  .mainpage__photodiv,
+  .mainpage__photo {
     opacity: 0;
-  animation-duration: 1s;
-  animation-name: appearance;
+    animation-duration: 1s;
+    animation-name: appearance;
     animation-iteration-count: 1;
-  animation-fill-mode: forwards;
-    animation-timing-function: linear;  
+    animation-fill-mode: forwards;
+    animation-timing-function: linear;
+  }
+
+  .mainpage__photodiv,
+  .mainpage__photo {
+    animation-delay: 0s;
+  }
+
+  #stendup {
+    position: fixed;
+    z-index: 2;
+    margin-top: 65vh;
+  }
+
+  .stendup {
+    width: 12vw;
+    height: 12vh;
+    margin-left: 1vw;
+  }
+
+  .mainpage__photo {
+    animation-delay: 1s;
+  }
+
+  @keyframes appearance {
+    from {
+      opacity: 0;
+    }
+
+    to {
+      opacity: 1;
+    }
+  }
 }
 
-.mainpage__photodiv, .mainpage__photo 
-{
-  animation-delay: 0s;
-}
-.mainpage__photo 
-{
-  animation-delay: 1s;   
-}
-@keyframes appearance
-{
-  from
-  {
-    opacity: 0;
+@media screen and (max-width: 600px) {
+  .mainpage {
+    width: 100vw;
+    padding-left: 5vw;
+    padding-top: 10vh;
+    display: grid;
+    grid-template-columns: 95vw;
+    grid-template-rows: 20vh 60vh 20vh;
+    margin: 0;
   }
-  to
-  {
-    opacity: 1;
-  }}}
 
-  @media screen and (max-width: 600px) {
-    .mainpage{
-      width:100vw;
-      padding-left: 5vw;
-      padding-top:10vh;
-      display:grid;
-      grid-template-columns: 95vw;
-      grid-template-rows: 20vh 60vh 20vh;
-      margin:0;
-  }
-  .mainpage__text{
-   
-    grid-row:1/2;
+  .mainpage__text {
+
+    grid-row: 1/2;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
     font-size: 25px;
     text-align: left;
-}
-.mainpage__text span{
+  }
+
+  .mainpage__text span {
     font-weight: 800;
-}
-.mainpage__button{
-  margin-top: 10vh;
+  }
+
+  .mainpage__button {
+    margin-top: 10vh;
     width: 80vw;
-    height:35%;
-    grid-row:3/4;
-    font-size:25px;
+    height: 35%;
+    grid-row: 3/4;
+    font-size: 25px;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
     background-color: #2FC97F;
     border: none;
     border-radius: 50px;
-    color:white;
+    color: white;
     margin-left: 4vw;
 
-}
-.mainpage__button:hover{
-    font-size:31px;
-}
-.mainpage__photodiv{
-  display: grid;
+  }
+
+  .mainpage__button:hover {
+    font-size: 31px;
+  }
+
+  .mainpage__photodiv {
+    display: grid;
     margin: 0;
     position: relative;
-    grid-row:2/3;
+    grid-row: 2/3;
     background-image: url("../images/mainpage/circles.png");
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: 0% 100%;
-}
-.mainpage__photo{
+  }
+
+  .mainpage__photo {
     align-self: flex-end;
     max-width: 100%;
     max-height: 100%;
-}
+  }
 
-.mainpage__photodiv, .mainpage__photo{
+  .mainpage__photodiv,
+  .mainpage__photo {
     opacity: 0;
-  animation-duration: 1s;
-  animation-name: appearance;
+    animation-duration: 1s;
+    animation-name: appearance;
     animation-iteration-count: 1;
-  animation-fill-mode: forwards;
-    animation-timing-function: linear;  
-}
+    animation-fill-mode: forwards;
+    animation-timing-function: linear;
+  }
 
-.mainpage__photodiv, .mainpage__photo 
-{
-  animation-delay: 0s;
-}
-.mainpage__photo 
-{
-  animation-delay: 1s;   
-}
-@keyframes appearance
-{
-  from
-  {
-    opacity: 0;
+  .mainpage__photodiv,
+  .mainpage__photo {
+    animation-delay: 0s;
   }
-  to
-  {
-    opacity: 1;
-  }}}
+
+  .mainpage__photo {
+    animation-delay: 1s;
   }
+
+  @keyframes appearance {
+    from {
+      opacity: 0;
+    }
+
+    to {
+      opacity: 1;
+    }
+  }
+}
