--- a/assets/style/whoiam.css
+++ b/assets/style/whoiam.css
@@ -17,6 +17,15 @@
     }
 
 
+    /*#stendup {
+        position: fixed;
+        z-index: 2;
+        width: 12vw;
+        height: 12vh;
+        margin-left: 5vw;
+        margin-top: 5vh;
+    }*/
+
     .whoiam__h2 {
         width: 17vw;
         margin-left: 48%;
@@ -155,14 +164,17 @@
         }
     }
 
+
+
+
 }
 
 
 
 @media screen and (max-width: 600px) {
     .whoiam__img {
-    display: none;
-}
+        display: none;
+    }
 
     .whoiam__p1 {
         display: none;
