--- a/assets/style/lessons.css
+++ b/assets/style/lessons.css
@@ -52,6 +52,7 @@
     grid-row: 2/3;
     text-decoration: none;
     margin-top: 7%;
+    margin-left: 5vw;
 }
 
 .lessons_text ul {
@@ -68,30 +69,96 @@
     margin-top: 5%;
     padding-right: 15%;
 }
+
+
+
+
+
+
+
+
+
 .lessons2 {
+    margin-top: 20vh;
+    margin-bottom: 15vh;
     display: grid;
     grid-template-columns: 50% 50%;
-    grid-template-rows: 20% 80%;
+    grid-template-rows: 100vh;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
     font-size: 100%;
     text-align: center;
+    
 }
 
-.lessons2 .video {
+
+.video{
+    height: 100%;
     display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 15% 65% 20%;
 }
 
-.lessons2 .teoria {
-    display: grid;
-    height: 80vh;
-    grid-column: 2/3;
-    grid-template-columns: 15% 40% 15%;
-    grid-template-rows: 20% 70%;
+.video__button{
+    width: 40%;
+    height: 60%;
+    font-size: 25px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 600;
+    background-color: #2FC97F;
+    border: none;
+    border-radius: 50px;
+    color: white;
+    justify-self: center;
+
+}
+.lessons2 h2{
     font-weight: 600;
 }
 
-.lessons2 .teoria .conspect_img {
+.video__div{
+    width: 100%;
+}
+.video__video{
+    width: 40%;
+
+}
+.conspect_img{
+    width: 90%;
+}
+.teoria{
+    height: 100%;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 15% 85%;
+    background-image: url('../images/lessons/conspect_fon.png');
+    background-size: 107%;
+    background-repeat: no-repeat;
+    background-position-y:0%;
+    background-position-x: -20%;
+}
+.teoria__container{
+    display: grid;
+    grid-template-columns: 20% 1fr 20%;
+    grid-row: 100%;
+   
+}
+.button_left img, .button_right img{
+    width: 40%;
+}
+.button_left, .button_right
+{
+    display: grid;
+    align-items: center;
+}
+.button_left{
+    padding-left: 30%;
+}
+.button_right{
+    padding-right: 30%;
+}
+
+/*.lessons2 .teoria .conspect_img {
     display: grid;
     width: 20vw;
     grid-column: 2/3;
@@ -142,11 +209,5 @@
 
 .lessons2 .teoria .button_right a img {
     width: 20%;
-}
+} */
 
-.lessons2 .teoria h2 {
-    display: grid;
-    grid-column: 1/4;
-    grid-row: 1/2;
-    font-weight: 600;
-}
