--- a/assets/style/mainpage.css
+++ b/assets/style/mainpage.css
@@ -24,6 +24,7 @@
   }
 
   .mainpage__button {
+    padding-top: 1vh;
     width: 80%;
     height: 35%;
     grid-column: 1/2;
@@ -32,6 +33,8 @@
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
     background-color: #2FC97F;
+    text-align: center;
+    text-decoration: none;
     border: none;
     border-radius: 50px;
     color: white;
@@ -41,6 +44,7 @@
 
   .mainpage__button:hover {
     font-size: 31px;
+    color:white;
   }
 
   .mainpage__photodiv {
