--- a/assets/style/otzivy.css
+++ b/assets/style/otzivy.css
@@ -67,4 +67,68 @@
 .otzivy__buttonleft:hover, .otzivy__buttonright:hover{
     width: 95%;
 }
+.otzivy__mobilecontainer{
+    display: none;
+}
+}
+
+@media screen and (max-width: 600px) {
+    .otzivy__h2{
+        width:70vw;
+        height: 7vh;
+        margin-left: 15vw;
+        padding-top: 1vh;
+        margin-top: 10vh;
+        font-family: 'Raleway', sans-serif;
+        font-weight: 600;
+        font-size: 7vw;
+        color:white;
+        text-align: center;
+        background-color: #2FC97F;
+        border-radius: 50px;
+        grid-column: 1/3;
+        grid-row: 1/2;
+    }
+.otzivy__container, .otzivy__container2{
+    display: none;
+}
+.otzivy__mobilecontainer{
+    padding-top:5vh;
+    display: grid;
+    grid-template-columns: 90vw;
+    padding-left: 5vw;
+    padding-right: 5vw;
+    grid-template-rows: 10vh 80vh 10vh;
+}
+.otzivy__link1,.otzivy__link2 {
+    display: grid;
+    justify-self: center;
+    align-self: center;
+    width:60vw;
+    height: 60%;
+    padding-top: 2vh;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 600;
+    font-size: 15px;
+    text-align: center;
+    color:white;
+    text-decoration: none;
+    background-color: #F389DB99;
+    border-radius: 50px;
+
+}
+
+.otzivy__link1:active,.otzivy__link2:active{
+    font-size: 17px;
+    color:white;
+}
+.otzivy__keys1{
+    display: grid;
+    align-self: center;
+}
+.otzivy__keys1_image{
+   
+    width:100%;
+    
+}
 }
