--- a/assets/style/mainpage.css
+++ b/assets/style/mainpage.css
@@ -83,12 +83,12 @@
     position: fixed;
     z-index: 2;
     margin-top: 65vh;
-    right: 10vw;
+    right: 7vw;
   }
 
   .telegram {
-    width: 12vw;
-    height: 12vh;
+    width: 10vw;
+    height: 10vh;
   }
 
   #whatsapp {
@@ -99,8 +99,8 @@
   }
 
   .whatsapp {
-    width: 12vw;
-    height: 12vh;
+    width: 10vw;
+    height: 10vh;
 
   }
 
@@ -147,17 +147,20 @@
 
 @media screen and (max-width: 600px) {
 
-  #stendup {
-    position: fixed;
-    z-index: 2;
-    margin-top: 65vh;
+  .telegram {
+    display: none;
   }
 
-  .stendup {
-    width: 12vw;
-    height: 12vh;
-    margin-left: 1vw;
+
+  .whatsapp {
+    display: none;
   }
+
+
+  .stendup {
+    display: none;
+  }
+
 
   .mainpage {
     width: 100vw;
