--- a/assets/style/lessons.css
+++ b/assets/style/lessons.css
@@ -1,8 +1,9 @@
 @media screen and (min-width: 601px) {
     .lessons {
+        padding-top:10vh;
         display: grid;
         grid-template-columns: 60% 40%;
-        grid-template-rows: 20% 80%;
+        grid-template-rows: 1fr;
         font-family: 'Raleway', sans-serif;
         font-weight: 600;
         text-align: center;
@@ -15,7 +16,7 @@
         padding-top: 1vh;
         font-family: 'Raleway', sans-serif;
         font-weight: 600;
-        font-size: 55px;
+        font-size:4.17vw;
         color: white;
         text-align: center;
         background-color: #2FC97F;
@@ -31,8 +32,8 @@
         background-image: url(../images/lessons/lessons_fon.png);
         background-repeat: no-repeat;
         background-size: 82%;
-        background-position-x: 88%;
-        background-position-y: 83%;
+        background-position-x: 90%;
+        background-position-y: 45%;
 
     }
 
@@ -62,7 +63,7 @@
         align-content: center;
         font-family: 'Raleway', sans-serif;
         font-weight: 400;
-        font-size: 200%;
+        font-size: 2.4vw;
         text-align: center;
     }
 
@@ -87,7 +88,7 @@
         grid-template-rows: 100vh;
         font-family: 'Raleway', sans-serif;
         font-weight: 600;
-        font-size: 100%;
+        font-size: 2vw;
         text-align: center;
 
     }
@@ -103,7 +104,7 @@
     .video__button {
         width: 40%;
         height: 60%;
-        font-size: 25px;
+        font-size:  1.89vw;
         font-family: 'Raleway', sans-serif;
         font-weight: 600;
         background-color: #2FC97F;
