--- a/assets/style/mainpage.css
+++ b/assets/style/mainpage.css
@@ -15,7 +15,7 @@
     grid-row: 1/2;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
-    font-size: 36px;
+    font-size:  2.73vw;
     text-align: center;
   }
 
@@ -29,7 +29,7 @@
     height: 35%;
     grid-column: 1/2;
     grid-row: 2/3;
-    font-size: 30px;
+    font-size: 2.27vw;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
     background-color: #2FC97F;
@@ -43,7 +43,7 @@
   }
 
   .mainpage__button:hover {
-    font-size: 31px;
+    font-size: 2.35vw;
     color: white;
   }
 
