--- a/assets/style/tryforfree.css
+++ b/assets/style/tryforfree.css
@@ -6,7 +6,7 @@
     padding-top: 1vh;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
-    font-size: 55px;
+    font-size: 4.17vw;
     color:white;
     text-align: center;
     background-color: #2FC97F;
@@ -71,7 +71,7 @@
     padding-top:5vh;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
-    font-size: 40px;
+    font-size: 3.03vw;
     background-image: url(../images/tryforfree/fon2.png);
     background-repeat: no-repeat;
     background-position:45% 20%; 
@@ -89,7 +89,7 @@
 .tryforfree__text1, .tryforfree__text2{
     font-family: 'Raleway', sans-serif;
     font-weight: 500;
-    font-size: 34px;
+    font-size: 2.57vw;
     margin:0;
 
 }
