--- a/assets/style/lessons.css
+++ b/assets/style/lessons.css
@@ -192,18 +192,27 @@
     .teoria {
         display: none;
     }
-
+    .teoria__container__mobil{
+        align-self:flex-start;
+    }
+    .teoria__mobil h2, .lessons2 h2{
+        text-align: center;
+        font-size: 6vw;
+    }
+    .carousel-indicators{
+        margin-top:20vh;
+    }
     .teoria__mobil {
-        margin-bottom: 5vh;
+
         display: grid;
         grid-template-columns: 100%;
-        grid-template-rows: 15% 85%;
-        row-gap: 6vh;
+        grid-template-rows: 20% 80%;
+        row-gap: 4vh;
         background-image: url('../images/lessons/conspect_fon.png');
-        background-size: 115%;
+        background-size: 125%;
         background-repeat: no-repeat;
-        background-position-y: 160%;
-        background-position-x: 20%;
+        background-position-y: 60%;
+        background-position-x: 32%;
     }
 
     .teoria__container {
@@ -255,8 +264,8 @@
     }
 
     .lessons__ul {
+        padding-top: 5vh;
         display: grid;
-        padding-top: 2vh;
         padding-left: 0px;
         grid-template-columns: 90vw;
         grid-template-rows: repeat(4, 8vh);
@@ -264,7 +273,7 @@
         align-content: center;
         font-family: 'Raleway', sans-serif;
         font-weight: 600;
-        font-size: 22px;
+        font-size: 5.5vw;
         text-align: center;
     }
 
