--- a/assets/style/mainpage.css
+++ b/assets/style/mainpage.css
@@ -177,7 +177,7 @@
     grid-row: 1/2;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
-    font-size: 25px;
+    font-size:  7vw;
     text-align: left;
   }
 
@@ -191,7 +191,7 @@
     width: 90vw;
     height: 80%;
     grid-row: 3/4;
-    font-size: 25px;
+    font-size: 6.4vw;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
     text-align: center;
