--- a/assets/style/otzivy.css
+++ b/assets/style/otzivy.css
@@ -106,10 +106,10 @@
     align-self: center;
     width:60vw;
     height: 60%;
-    padding-top: 2vh;
+    padding-top: 1.5vh;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
-    font-size: 15px;
+    font-size:4vw;
     text-align: center;
     color:white;
     text-decoration: none;
